[TASK] Fix spacing

--- a/src/_minimal/less/base/general.less
+++ b/src/_minimal/less/base/general.less
@@ -103,7 +103,3 @@ button {
 p {
   margin-top: 0;
 }
-
-.rtl * {
-  direction: rtl;
-}
